# cpp-printer

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: toc.yml
csrc/: main.cpp
csrc/printer/: CMakeLists.txt  backward.cpp  backward.hpp  function.h  icecream-wrap.hpp
csrc/profiler/: function.h
include/: ProcessInfo.hpp  cpprinter.hpp  icecream.hpp
scripts/: build.sh  run.sh  tagchange.sh
scripts-py/: README.md  parse_chrome_tracing.py
src/: ProcessInfo.cpp  cpprinter.cpp
src/trace/: address_resolution.cpp  address_resolution.hpp  calltrace.cpp  calltrace.hpp
src/utils/: CLI.cpp  CLI.hpp  env.hpp  file_system_utils.hpp  fstream_wrapper.hpp  shared_object.hpp  thread.hpp  time.hpp
tests/: CMakeLists.txt  destructor.cpp  destructor.hpp  multithread.cpp  vargs.cpp
